# skillforge

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  dev.env.example  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js
.github/workflows/: tests.yml
apps/admin/: apps.py
apps/admin/forms/: __init__.py  user.py
apps/admin/urls/: __init__.py  auth.py  contact.py  dashboard.py  user.py
apps/admin/views/: __init__.py  auth.py  contact.py  dashboard.py  user.py
apps/ai/: models.py  views.py
apps/ai/nlp/: message_processor.py  (+1 more)
apps/contact/: README.md  admin.py  enums.py  filter.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/finance/: README.md  admin.py  enums.py  models.py  serializers.py  urls.py  views.py
apps/log/: README.md  admin.py  enums.py  handlers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/reminder/: README.md  enums.py  models.py  services.py  tasks.py  urls.py  webhooks.py
apps/user/: README.md  models.py  serializers.py
core/: README.md  backends.py  db_router.py  enums.py  fields.py  form_tags.py  models.py  money.py  pagination.py  permissions.py  serializers.py  utils.py  views.py
core/services/: exchange_rate_api.py  telegram_api.py
requirements/: base.txt  dev.txt  local.txt  prod.txt  test.txt
scripts/: add_subscription_categories_and_services.py  vcard_parse.py
skillforge/: admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
skillforge/settings/: base.py  local.py  prod.py  test.py
static/src/: admin.css
templates/admin/: base.html  base_site.html  dashboard.html  index.html  login.html
tests/: README.md  conftest.py
tests/e2e/: conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py
(+54 files in other folders)
