[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "skillforge.settings.test"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["*.migrations.*", "*.settings.test.*"]
ignore_errors = true

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"