[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "skillforge.settings.test"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers -v --no-header"
markers = [
    "unit: Unit tests that test small, isolated components",
    "integration: Tests that cover interaction between different components",
    "e2e: End-to-end tests that test the full application",
    "slow: Tests that are particularly slow to run",
    "model: Tests for Django models",
    "view: Tests for Django views",
    "serializer: Tests for DRF serializers",
    "api: Tests for API endpoints",
    "current: Currently working on tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["*.migrations.*", "*.settings.test.*"]
ignore_errors = true

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"